--- a/Tests/UnitTests/V2LibraryDistributionTests/V2LibraryDistributionTests.vcxproj
+++ b/Tests/UnitTests/V2LibraryDistributionTests/V2LibraryDistributionTests.vcxproj
@@ -122,8 +122,8 @@
   <ItemGroup>
     <ClCompile Include="..\V2LibraryTests\Common.cpp" />
     <ClCompile Include="Main.cpp" />
-    <ClCompile Include="MinibatchSource.cpp" />
-    <ClCompile Include="Trainer.cpp" />
+    <ClCompile Include="MinibatchSourceTest.cpp" />
+    <ClCompile Include="TrainerTest.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="DistributionTestCommon.h" />
